<resources>

    <string name="app_name">Unit Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_unit_convert">Unit Converter</string>
    <string name="title_activity_about">About</string>
    <string name="DevEmail">robert@robertshippey.net</string>
    <string name="DevWebsite">http://robertshippey.net</string>
    <string name="title_activity_change_units">ChangeUnits</string>
    <string-array name="units">
        <item >mm</item>
        <item >cm</item>
        <item >in</item>
        <item >ft</item>
    </string-array>
    <string name="done">Done</string>
    <string name="convertFrom">Convert from</string>
    <string name="convertTo">Convert to</string>
    <string name="about">About</string>
    <string name="changeUnits">Change Units</string>
    <string name="converter">Converter</string>
    <string name="processing">Processing…</string>
    <string name="error">Error!</string>
    <string name="devName">Robert Shippey</string>
    <string name="uni">Nottingham Trent University</string>
    <string name="aboutDescription">"Unit Converter created for Pervasive Computing. "</string>
    <string name="emailMe">Email Me!</string>
    <string name="website">Website!</string>
    <string name="UnitConverterChangeUnitHint">Hint: Hit the menu button to change units!</string>
    <string name="changeUnitsSilly">Don\'t pick a boring combination!\nConvert from something to something else.</string>
	<string name="notanumber">Try entering a number!</string>
    
</resources>